k8s/04-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: kt2-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: chat-backend:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: kt2-k8s
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
